# CounterPartC

./: .gitignore  CMakeLists.txt  README.md
buildASM/: GenerateTarget.py
buildSrc/: CodeOptimizer.py  GenerateAST.py  bnf.txt
src/: cpc.l  cpc.y  main.cpp
src/IR/: CodeOptimization.cpp  CodeOptimization.h  context.cpp  context.h  ir.cpp  ir.h  value.cpp  value.h
src/IR/decl/: abstract_declarator.cpp  declaration.cpp  declaration_specifiers.cpp  declarator.cpp  direct_abstract_declarator.cpp  direct_declarator.cpp  enum_specifier.cpp  enumerator.cpp  enumerator_list.cpp  identifier_list.cpp  init_declarator.cpp  init_declarator_list.cpp  initializer.cpp  initializer_list.cpp  parameter_declaration.cpp  parameter_list.cpp  parameter_type_list.cpp  pointer.cpp  specifier_qualifier_list.cpp  storage_class_specifier.cpp  struct_declaration.cpp  struct_declaration_list.cpp  struct_declarator.cpp  struct_declarator_list.cpp  struct_or_union.cpp  struct_or_union_specifier.cpp  type_name.cpp  type_qualifier.cpp  type_qualifier_list.cpp  (+1 more)
src/ast/: ast.h  basic_ast.h  declaration_type.h  render.cpp  render.h
test/: Hello.cpp  Hello.cpp.html  Hello.cpp.txt  Hello.out  Hello.s  arith.cpp  array.cpp  array.cpp.html  array.cpp.txt  array.s  function.cpp  function.cpp.html  function.cpp.s  function.cpp.txt  function.out  function.s  goto.cpp  jump.cpp  jump.cpp.html  jump.cpp.s  jump.cpp.txt  jump.out  jump.s  pointer.cpp  pointer.cpp.html  pointer.cpp.s  pointer.cpp.txt  pointer.out  pointer.s  print.cpp  switch.cpp  variable.cpp  variable.cpp.html  variable.cpp.txt
(+164 files in other folders)
